# simple-fastapi-k8s-app

./: README.md  dockerfile  pyproject.toml
apisix/: README.md  config.yaml
kubernetes/: deployment.yaml
nginx/: README.md  policy.yaml  secret.yaml  virtual-server.yaml
src/: main.py
