[tool.poetry]
name = "ctc-forwarder"
version = "0.0.0"
description = "Forwarder Service for CTC Container Scan Results and Metadata"
authors = ["Sheng How KONG <skong@bitdefender.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
